<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="city"
            type="com.practice.weathermodel.pojo.City" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardBackgroundColor="@color/colorBackDetailCard"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorBackDetailCard"
        android:padding="4dp"

        android:layout_margin="4dp">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@{city.getDt}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="12sp"
            android:text="@{city.getDt}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDate" />

        <TextView
            android:id="@+id/tvTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="12sp"
            android:text='@{city.main.temp == -100 ? "\u00B0" + "C" : String.valueOf((int)city.main.temp) + "\u00B0"}'
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTime" />

        <ImageView
            android:id="@+id/ivWeatherIcon"
            android:layout_width="36dp"
            android:layout_height="36dp"

            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toStartOf="@+id/tvDate"
            app:layout_constraintEnd_toEndOf="@+id/tvDate"
            app:layout_constraintTop_toBottomOf="@+id/tvTemp"
            android:src="@{city.weather.get(0).getIcon()}"
            android:contentDescription="@string/weather_icon" />

        <TextView
            android:id="@+id/tvWind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="12sp"
            android:text='@{city.wind.speed == -1 ? @string/wind_label : String.valueOf((int)city.wind.speed)}'
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivWeatherIcon" />

        <TextView
            android:id="@+id/tvPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="12sp"
            android:text='@{city.main.pressure == -1 ? @string/pressure_label : String.valueOf(city.main.pressure)}'
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWind" />

        <TextView
            android:id="@+id/tvHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="12sp"
            android:text='@{city.main.humidity == -1 ? @string/humidity_label : String.valueOf(city.main.humidity)}'
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPressure" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>