<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="cityName"
            type="java.lang.String" />
        <variable
            name="city"
            type="com.practice.weathermodel.pojo.City" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackDetailFragment">

        <TextView
            android:id="@+id/tvCityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="24sp"
            android:text='@{cityName}'
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCurrentTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="8dp"
            android:textSize="24sp"
            android:text='@{String.valueOf((int)city.main.temp) + "\u00B0"}'
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivCurrentWeatherIcon"
            app:layout_constraintBottom_toBottomOf="@+id/ivCurrentWeatherIcon" />

        <ImageView
            android:id="@+id/ivCurrentWeatherIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"

            android:scaleType="centerInside"
            android:adjustViewBounds="true"

            app:layout_constraintStart_toEndOf="@+id/tvCurrentTemp"
            app:layout_constraintTop_toBottomOf="@+id/tvCityName"
            android:src="@{city.weather.get(0).getIcon()}"
            android:contentDescription="@string/weather_icon" />

        <TextView
            android:id="@+id/tvLine"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:textSize="24sp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@+id/ivCurrentWeatherIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWeather"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorBackDetailFragment"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLine" />

        <ProgressBar
            android:id="@+id/progress_loading"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>